; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/hwmon/extr_lm63.c_set_temp2_crit_hyst.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/hwmon/extr_lm63.c_set_temp2_crit_hyst.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.device_attribute = type { i32 }
%struct.i2c_client = type { i32 }
%struct.lm63_data = type { i32, i32* }

@LM63_REG_REMOTE_TCRIT_HYST = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.device*, %struct.device_attribute*, i8*, i64)* @set_temp2_crit_hyst to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @set_temp2_crit_hyst(%struct.device* %0, %struct.device_attribute* %1, i8* %2, i64 %3) #0 {
  %5 = alloca %struct.device*, align 8
  %6 = alloca %struct.device_attribute*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca %struct.i2c_client*, align 8
  %10 = alloca %struct.lm63_data*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  store %struct.device* %0, %struct.device** %5, align 8
  store %struct.device_attribute* %1, %struct.device_attribute** %6, align 8
  store i8* %2, i8** %7, align 8
  store i64 %3, i64* %8, align 8
  %13 = load %struct.device*, %struct.device** %5, align 8
  %14 = call %struct.i2c_client* @to_i2c_client(%struct.device* %13)
  store %struct.i2c_client* %14, %struct.i2c_client** %9, align 8
  %15 = load %struct.i2c_client*, %struct.i2c_client** %9, align 8
  %16 = call %struct.lm63_data* @i2c_get_clientdata(%struct.i2c_client* %15)
  store %struct.lm63_data* %16, %struct.lm63_data** %10, align 8
  %17 = load i8*, i8** %7, align 8
  %18 = call i64 @simple_strtol(i8* %17, i32* null, i32 10)
  store i64 %18, i64* %11, align 8
  %19 = load %struct.lm63_data*, %struct.lm63_data** %10, align 8
  %20 = getelementptr inbounds %struct.lm63_data, %struct.lm63_data* %19, i32 0, i32 0
  %21 = call i32 @mutex_lock(i32* %20)
  %22 = load %struct.lm63_data*, %struct.lm63_data** %10, align 8
  %23 = getelementptr inbounds %struct.lm63_data, %struct.lm63_data* %22, i32 0, i32 1
  %24 = load i32*, i32** %23, align 8
  %25 = getelementptr inbounds i32, i32* %24, i64 2
  %26 = load i32, i32* %25, align 4
  %27 = call i64 @TEMP8_FROM_REG(i32 %26)
  %28 = load i64, i64* %11, align 8
  %29 = sub nsw i64 %27, %28
  store i64 %29, i64* %12, align 8
  %30 = load %struct.i2c_client*, %struct.i2c_client** %9, align 8
  %31 = load i32, i32* @LM63_REG_REMOTE_TCRIT_HYST, align 4
  %32 = load i64, i64* %12, align 8
  %33 = call i32 @HYST_TO_REG(i64 %32)
  %34 = call i32 @i2c_smbus_write_byte_data(%struct.i2c_client* %30, i32 %31, i32 %33)
  %35 = load %struct.lm63_data*, %struct.lm63_data** %10, align 8
  %36 = getelementptr inbounds %struct.lm63_data, %struct.lm63_data* %35, i32 0, i32 0
  %37 = call i32 @mutex_unlock(i32* %36)
  %38 = load i64, i64* %8, align 8
  ret i64 %38
}

declare dso_local %struct.i2c_client* @to_i2c_client(%struct.device*) #1

declare dso_local %struct.lm63_data* @i2c_get_clientdata(%struct.i2c_client*) #1

declare dso_local i64 @simple_strtol(i8*, i32*, i32) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i64 @TEMP8_FROM_REG(i32) #1

declare dso_local i32 @i2c_smbus_write_byte_data(%struct.i2c_client*, i32, i32) #1

declare dso_local i32 @HYST_TO_REG(i64) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
